SCHEDULING-1978 Add MacOS support to ProcessTreeKiller
 - Port latest upstream code from jenkins:

     https://github.com/jenkinsci/jenkins/blob/56024205c10095d2c0b36f4f3a7465dcae6fc7ae/core/src/main/java/hudson/util/ProcessTree.java

 - Use only log4j in ProcessTreeKiller

 - Modify TestProcessTreeKiller:

   - call "ps" in a manner compatible with MacOS

   - only take into account the processes of the current user, possibly
     reducing the number of spurious failures

Change-Id: I5b73568a170a704d4dda28f449294a6cb69225ba